- More fixes on mobile view. - Content fixes.

--- a/css/laze.css
+++ b/css/laze.css
@@ -78,14 +78,14 @@ div.social>.twitter {
     margin-left: 0;
 }
 
-div.social .flip-container {
+div.social .flip-container, div.content-header .flip-container {
     -webkit-perspective: 1000;
     -moz-perspective: 1000;
     perspective: 1000;
 }
 
 
-div.social .flip-container:hover .flipper, .flip-container.hover .flipper, #flip-toggle.flip .flipper {
+div.social .flip-container:hover .flipper, .flip-container.hover .flipper, #flip-toggle.flip .flipper, div.content-header .flip-container:hover .flipper {
     -webkit-transform: rotateY(180deg);
     -moz-transform: rotateY(180deg);
     transform: rotateY(180deg);
@@ -93,12 +93,12 @@ div.social .flip-container:hover .flipper, .flip-container.hover .flipper, #flip
     -ms-filter: "FlipH";
 }
 
-div.social .flip-container, .front, .back {
+div.social .flip-container, .front, .back, div.content-header .flip-container {
     width: 20px;
     height: 20px;
 }
 
-div.social .flipper {
+div.social .flipper, div.content-header .flipper {
     -webkit-transition: 0.4s;
     -webkit-transform-style: preserve-3d;
 
@@ -112,7 +112,7 @@ div.social .flipper {
     display: block;
 }
 
-div.social .front, div.social .back {
+div.social .front, div.social .back, div.content-header .front, div.content-header .back {
     -webkit-backface-visibility: hidden;
     -moz-backface-visibility: hidden;
     backface-visibility: hidden;
@@ -132,7 +132,14 @@ div.social .front {
     z-index: 2;
 }
 
-div.social .back {
+div.content-header .front {
+    background: #57caf3;
+    color: #ffffff;
+    z-index: 2;
+}
+
+
+div.social .back, div.content-header .back {
     background: #57caf3;
     color: #ffffff;
     -webkit-transform: rotateY(180deg);
@@ -145,12 +152,13 @@ div.content {
     position: absolute;
     top: 100px;
     left: 180px;
-    margin-right: 180px;
+    margin-right: 10em;
 }
 
 div.content>div.menu {
     padding: 0;
     height: 45px;
+    overflow: hidden;
 }
 
 div.content>div.menu>.title {
@@ -162,17 +170,25 @@ div.content>div.menu>.title {
     margin-top: -1px;
     height: 45px;
     display: inline-block;
+    text-wrap: none;
+    white-space: nowrap;
+    overflow: hidden;
     float: left;
 }
 
-div.content>div.menu>ul {
+div.content>div.menu>ul, div.content-menu>ul {
     list-style: none;
     height: 45px;
     padding: 10px 0 0 0;
+    margin: 0;
     display: inline-block;
 }
 
-div.content>div.menu>ul li {
+div.content-menu>ul {
+    height: auto;
+}
+
+div.content>div.menu>ul li, div.content-menu>ul li {
     background: #57caf3;
     float: left;
     height: 26px;
@@ -181,7 +197,12 @@ div.content>div.menu>ul li {
     padding: 0 10px 0 10px;
 }
 
-div.content>div.menu>ul li a {
+div.content-menu>ul li {
+    float: none;
+    margin-top: 10px;
+}
+
+div.content>div.menu>ul li a, div.content-menu>ul li a {
     color: #ffffff;
     text-transform: uppercase;
 }
@@ -208,12 +229,26 @@ div.content-header>.title {
     white-space: nowrap;
 }
 
+div.content-header>div.shortcut {
+    margin-left: 10px;
+}
+
+div.content-header>div.shortcut>span {
+    color: #57caf3;
+    margin-left: 10px;
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 20px;
+    text-transform: uppercase;
+}
+
 div.content-container {
     background-color: #ffffff;
     position: absolute;
     top: 100px;
     left: 0;
 }
+
 blockquote {
     padding: 10px 20px 10px 10px
 }
